--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,33 @@
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-		<title>Svelte app</title>
-
 		<link rel='icon' type='image/png' href='/svelte.svg'>
 		<link rel='stylesheet' href='/style.css'>
 		<link rel='stylesheet' href='/build/bundle.css'>
+
+		<!-- Primary Meta Tags -->
+		<title>PollProxy | Effortlessly create interactive polls</title>
+		<meta name="title" content="PollProxy | Effortlessly create interactive polls" />
+		<meta name="description"
+			content="Looking to gauge opinions or get feedback? Our poll maker tool lets you quickly build and share polls for free. Leverage real-time data and proximity-based insights to make more informed choices. #Poll #Voting #Proximity" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://pollproxy.vercel.app/" />
+		<meta property="og:title" content="PollProxy | Effortlessly create interactive polls" />
+		<meta property="og:description"
+			content="Looking to gauge opinions or get feedback? Our poll maker tool lets you quickly build and share polls for free. Leverage real-time data and proximity-based insights to make more informed choices. #Poll #Voting #Proximity" />
+		<meta property="og:image" content="/poll.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://pollproxy.vercel.app/" />
+		<meta property="twitter:title" content="PollProxy | Effortlessly create interactive polls" />
+		<meta property="twitter:description"
+			content="Looking to gauge opinions or get feedback? Our poll maker tool lets you quickly build and share polls for free. Leverage real-time data and proximity-based insights to make more informed choices. #Poll #Voting #Proximity" />
+		<meta property="twitter:image" content="/poll.png" />
+
+		<!-- Meta Tags Generated with https://metatags.io -->
 
 		<script defer src='/build/bundle.js'></script>
 	</head>
