--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       property="og:description"
       content="Looking to gauge opinions or get feedback? Our poll maker tool lets you quickly build and share polls for free. Leverage real-time data and proximity-based insights to make more informed choices. #Poll #Voting #Proximity"
     />
-    <meta property="og:image" content="/poll.png" />
+    <meta property="og:image" content="https://pollproxy.vercel.app/poll.png" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="https://pollproxy.vercel.app/poll.png" />
     <meta property="twitter:url" content="https://pollproxy.vercel.app/" />
     <meta
       property="twitter:title"
@@ -41,9 +41,7 @@
       property="twitter:description"
       content="Looking to gauge opinions or get feedback? Our poll maker tool lets you quickly build and share polls for free. Leverage real-time data and proximity-based insights to make more informed choices. #Poll #Voting #Proximity"
     />
-    <meta property="twitter:image" content="/poll.png" />
-
-    <!-- Meta Tags Generated with https://metatags.io -->
+    <meta property="twitter:image" content="https://pollproxy.vercel.app/poll.png" />
   </head>
 
   <div id="app"></div>
